--- a/earthquake_Project/pom.xml
+++ b/earthquake_Project/pom.xml
@@ -46,7 +46,12 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.9</version>
-    </dependency> 
+    </dependency>
+    <dependency>  
+    <groupId>org.json</groupId>  
+    <artifactId>json</artifactId>  
+    <version>20180130</version>  
+</dependency>   
   </dependencies>
 
   <build>
