--- a/earthquake_Project/pom.xml
+++ b/earthquake_Project/pom.xml
@@ -51,7 +51,12 @@
     <groupId>org.json</groupId>  
     <artifactId>json</artifactId>  
     <version>20180130</version>  
-</dependency>   
+</dependency>  
+<dependency>
+  <groupId>com.neovisionaries</groupId>
+  <artifactId>nv-i18n</artifactId>
+  <version>1.29</version>
+</dependency> 
   </dependencies>
 
   <build>
